# kreenshot-editor

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  README  README.md  TODO  TODO.txt  kreenshot-editor.1
doc/: DOC.md  kreenshot-editor-local-debug.sh
doc/pak/: .gitignore
doc/pak/osc/: README-osc.md  README.md  master-to-source.sh
doc/pak/osc/kreenshot-editor/: kreenshot-editor.changes  kreenshot-editor.spec
pak/: .gitignore
pak/osc/: README.txt
pak/osc/kreenshot-editor/: kreenshot-editor.spec
pak/osc/kreenshot-editor-incubating/: kreenshot-editor.spec
src/: CMakeLists.txt  main.cpp  prepare-include-files.sh
src/XDG_DATA_DIR/: README
src/XDG_DATA_DIR/kreenshot-editor/: kreenshot-editor.txt
src/lib/kreenshoteditor/: .gitignore  CMakeLists.txt  kreenshoteditor.cpp  kreenshoteditor.h  prepare-include-files.sh
src/lib/kreenshoteditor/core/: desktopservices.cpp  desktopservices.h  document.cpp  document.h  documentfile.cpp  documentfile.h  errorstatus.h  item.cpp  item.h  itemsmanager.cpp  itemsmanager.h  kreengraphicsitems.cpp  kreengraphicsitems.h  kreengraphicsscene.cpp  kreengraphicsscene.h  kreenitem.cpp  kreenitem.h  myqgraphicsscene.cpp  myqgraphicsscene.h  outputfilenamegenerator.cpp  outputfilenamegenerator.h  outputfilenamemanager.cpp  outputfilenamemanager.h  settings.cpp  settings.h  settingsgroupoutput.cpp  settingsgroupoutput.h  settingsmanager.cpp  settingsmanager.h  toolmanager.h
src/lib/kreenshoteditor/core/impl/: kreengraphicsitembase.cpp  kreengraphicsitembase.h  kreengraphicsitems.cpp  kreengraphicsitems.h  kreengraphicsscene.cpp  kreengraphicsscene.h  outputfilenamegenerator.cpp  outputfilenamegenerator.h  rendervisibilitycontrol.cpp  rendervisibilitycontrol.h  selectionhandlegraphicsitem.cpp  selectionhandlegraphicsitem.h  selectionhandles.cpp  selectionhandles.h  toolmanager.h  undocommands.cpp  undocommands.h
src/lib/kreenshoteditor/ui/: kreengraphicsitems.cpp  kreengraphicsitems.h  kreenqgraphicsitemsimpl.h  maineditorwidget.cpp  maineditorwidget.h  myqgraphicsscene.cpp  myqgraphicsscene.h  myqgraphicsview.cpp  myqgraphicsview.h  toolmanager.h
src/lib/kreenshoteditor/ui/cursors/: cursorlightcross.cpp  cursorlightcross.h
src/lib/kreenshoteditor/ui/impl/: kreengraphicsitembase.cpp  kreengraphicsitembase.h  kreengraphicsitems.cpp  kreengraphicsitems.h  kreengraphicsscene.cpp  kreengraphicsscene.h  kreengraphicsview.cpp  kreengraphicsview.h  rendervisibilitycontrol.cpp  rendervisibilitycontrol.h  selectionhandlegraphicsitem.cpp  selectionhandlegraphicsitem.h  selectionhandles.cpp  selectionhandles.h  toolmanager.h
src/lib/kreenshoteditor/ui/selectionhandles/: selectionhandlebase.cpp  selectionhandlebase.h  selectionhandlegraphicsitem.cpp  selectionhandlegraphicsitem.h  selectionhandles.cpp  selectionhandles.h  selectionhandlesmgr.cpp  selectionhandlesmgr.h  selectionhandlestypes.h
src/lib/kreenshoteditor/ui/settings/: pageoutput.cpp  pageoutput.h  pageoutput.ui  pageoutputimpl.h  preferencesdialog.cpp  preferencesdialog.h  preferencesdialog.ui
src/lib/kreenshoteditor/ui/widgets/: kreentoolbutton.cpp  kreentoolbutton.h  menubuttonutil.cpp  menubuttonutil.h
src/lib/kreenshoteditor/util/: exportutil.h  pimplutil.h  qtworkarounds.h  sharedptrutil.h
src/libkreenshoteditor/: CMakeLists.txt  kreenshoteditor.cpp  kreenshoteditor.h
src/libkreenshoteditor/core/: item.cpp  item.h  itemsmanager.cpp  itemsmanager.h
src/libkreenshoteditor/ui/: maineditorwidget.cpp  maineditorwidget.h
src/ui/: MainWindow.cpp  MainWindow.h  MainWindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
tests/: CMakeLists.txt  Test1.cpp  Test1.h  TestCore.cpp  TestCore.h  TestSettings.cpp  TestSettings.h  TestUi.cpp  TestUi.h  TestWidgetsInteractive.cpp
tests/trial/: graphicsview1.cpp  graphicsview1.h
tests/widgets/: mainwindow1.cpp  mainwindow1.h
